...

    func makeRecipesViewController(recipecCoordinator: RecipesCoordinator) -> RecipesViewController {
        let view = RecipesViewController()
        let presenter = RecipesPresenter(view: view, coordinator: recipecCoordinator)
        view.presenter = presenter
        view.tabBarItem = UITabBarItem(
            title: "Recipes",
            image: UIImage.recipes,
            selectedImage: UIImage.recipesFill
        )
        return view
    }

...
        userProfileUserCoordinator: UserProfileCoordinator
    ) -> UserProfileViewController {
        let view = UserProfileViewController()
        let presenter = UserProfilePresenter(view: view, userCoordinator: userProfileUserCoordinator)
        view.presenter = presenter
        view.tabBarItem = UITabBarItem(
            title: "Profile",
            image: UIImage.smile,
            selectedImage: UIImage.smileFill
        )
        return view
    }

...
