...
            portionWeight: "895 g"
        )
    ]

    lazy var category: [Category] = [
        .init(avatarImageName: "salad", categoryTitle: .salad, sizeCell: .medium, recepies: []),
        .init(avatarImageName: "soup", categoryTitle: .soup, sizeCell: .medium, recepies: []),
        .init(
            avatarImageName: "chicken",
            categoryTitle: .chicken,
            sizeCell: .big,
            recepies: []
        ),
...
