...
    }()

    private lazy var okButton: UIButton = {
        let button = UIButton()
        button.backgroundColor = .logInButtonColor(alpha: 1)
        button.tintColor = .white
        button.setTitle("Ok", for: .normal)
        button.layer.cornerRadius = 12
        button.addTarget(self, action: #selector(okButtonTapped), for: .touchUpInside)
        return button
    }()

    private lazy var giftsLabel: UILabel = {
...

    private func setupNavigationBar() {
        navigationController?.navigationBar.tintColor = .black
        navigationItem.title = "Our Partners"
        navigationController?.navigationBar.prefersLargeTitles = false
        navigationItem.setHidesBackButton(true, animated: false)
        let closeButton = UIButton(type: .custom)
        closeButton.setImage(UIImage(named: "closeButton"), for: .normal)
        closeButton.addTarget(self, action: #selector(closeButtonTapped), for: .touchUpInside)
        closeButton.frame = CGRect(x: 0, y: 0, width: 30, height: 30)
        let closeBarButtonItem = UIBarButtonItem(customView: closeButton)
        navigationItem.rightBarButtonItem = closeBarButtonItem
    }
...
