...
final class TermsPrivatePolicyView: UIView {
    // MARK: - Constants

    enum Constants {
        static var fontVerdana = "Verdana"
        static var fontVerdanaBold = "Verdana-Bold"
        static var titleTermsOfUse = "Terms of Use"
        static var titlePrivatePolicy = "Welcome to our recipe app! We're thrilled to\n" +
            "have you on board. To ensure a delightful\n" +
            "experience for everyone, please take a moment to\n" +
            "familiarize yourself with our rules:\n" +
            "User Accounts:\n" +
            "Maintain one account per user.\n" +
...
